# AccRQA

./: .buildinfo  .gitattributes  .gitignore  .gitignore.in  AccRQA-GPU-DET-RR.cu  AccRQA-GPU-HST.cu  AccRQA-GPU-LAM.cu  AccRQA-GPU-RR-ER.cu  AccRQA-GPU-RR.cu  AccRQA_CPU_function.cpp  AccRQA_CPU_function.h  AccRQA_GPU_function_wrappers.h  AccRQA_LengthHistogram.cpp  AccRQA_LengthHistogram.hpp  AccRQA_R_bindings.cpp  AccRQA_RecurrentRate.cpp  AccRQA_RecurrentRate.hpp  AccRQA_library.hpp  AccRQA_metrics.cuh  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION  GPU_isqrt.cuh  GPU_reduction.cuh  LICENSE  LICENSE.md  MANIFEST.in  Makefile  NAMESPACE  RAccRQA.R  README.md  RQA.cpp  RQA_tests.cpp  cleanup  configure  configure.ac  configure.win  debug.h  genindex.html  how_to_contribute.html  (+12 more)
.github/workflows/: docs.yaml  wheels.yaml  wheels_cuda.yaml  wheels_test.yaml
R/: RAccRQA.R  threads.R
_sources/: how_to_contribute.rst.txt  install.rst.txt  rqa_metrics.rst.txt
application/: CMakeLists.txt  RQA.cpp  python_accrqa_example.py
cmake/: compiler_options.cmake
docs/: Doxyfile
docs/src/: conf.py  how_to_contribute.rst  index.rst  install.rst  rqa_metrics.rst
docs/src/_static/: empty.txt
include/: AccRQA_config.hpp  AccRQA_definitions.hpp  AccRQA_functions.hpp  AccRQA_library.hpp  AccRQA_printf.hpp  AccRQA_python_bindings.hpp  AccRQA_threads.hpp  AccRQA_utilities_comp_platform.hpp  AccRQA_utilities_distance.hpp  AccRQA_utilities_error.hpp  AccRQA_utilities_mem.hpp
inst/: WORDLIST
man/: accRQA_RR.Rd  accrqa_DET.Rd  accrqa_LAM.Rd  accrqa_RP.Rd  accrqa_RR.Rd  accrqa_RR_target.Rd  accrqa_get_max_threads.Rd  accrqa_get_num_threads.Rd  accrqa_set_num_threads.Rd  plot.accrqa_rp.Rd
python/: accrqa.py  accrqa_error.py  accrqa_lib.py  accrqa_mem.py  example.py
src/: AccRQA-GPU-HST.cu  AccRQA-GPU-RR.cu  AccRQA_CPU_function.cpp  AccRQA_CPU_function.hpp  AccRQA_GPU_function.hpp  AccRQA_R_bindings.cpp  AccRQA_functions.cpp  AccRQA_metrics.cuh  AccRQA_python_bindings.cpp  AccRQA_threads.cpp  AccRQA_utilities_mem.cpp  CMakeLists.txt  CPU_timer.h  GPU_scan.cuh  GPU_timer.h  Makevars  Makevars.in  Makevars.in2  debug.h  test.R  utils_cuda.h
src/accrqa/: __init__.py  accrqa.py  accrqa_compplatform.py  accrqa_distance.py  accrqa_error.py  accrqa_lib.py  accrqa_mem.py  accrqa_test.py
tests/: CMakeLists.txt  test_R-RQA.R  test_RQA.cpp  testthat.R
tests/testthat/: check_time_test.R  test-accRQA_CRQA.R  test-accRQA_DET.R  test-accRQA_LAM.R  test-accRQA_PyRQA.R  test-accRQA_RP.R  test-accRQA_RR.R  test-accRQA_target.R
tests/testthat/testdata/: expected_CRQA_DET_euclidean.rds  expected_CRQA_DET_maximal.rds  expected_CRQA_LAM_euclidean.rds  expected_CRQA_LAM_maximal.rds  expected_CRQA_RR_euclidean.rds  expected_CRQA_RR_maximal.rds  expected_PyRQA_DET_euclidean.rds  expected_PyRQA_LAM_euclidean.rds  expected_PyRQA_RR_euclidean.rds  input.rds  input.txt
vignettes/: accrqa.Rmd  accrqa_DET.Rmd  accrqa_LAM.Rmd  accrqa_RP.Rmd  accrqa_RR.Rmd  accrqa_RR_target.Rmd
